--- a/docs/modules/stackablectl/pages/commands/stacklet.adoc
+++ b/docs/modules/stackablectl/pages/commands/stacklet.adoc
@@ -29,6 +29,7 @@ Options:
           Print help (see a summary with '-h')
 ----
 
+[#iist-stacklets]
 == Listing Deployed Stacklets
 
 [source,console]
