--- a/docs/modules/stackablectl/pages/commands/stack.adoc
+++ b/docs/modules/stackablectl/pages/commands/stack.adoc
@@ -1,5 +1,5 @@
 = stackablectl stack
-:page-aliases: stackablectl::commands/stack.adoc
+:page-aliases: stable@stackablectl::commands/stack.adoc
 
 A stack is a collection of ready-to-use Stackable data products as well as required third-party services like Postgresql
 or MinIO. It is tied to a specific release of the Stackable data platform, which will provide the required operators for
