--- a/docs/modules/stackablectl/pages/customization/add-release.adoc
+++ b/docs/modules/stackablectl/pages/customization/add-release.adoc
@@ -1,5 +1,5 @@
 = Add a Release
-:page-aliases: stackablectl::customization/add_release.adoc
+:page-aliases: stable@stackablectl::customization/add_release.adoc
 
 == Motivation
 
