--- a/docs/modules/stackablectl/pages/customization/add-stack.adoc
+++ b/docs/modules/stackablectl/pages/customization/add-stack.adoc
@@ -1,5 +1,5 @@
 = Add a Stack
-:page-aliases: stackablectl::customization/add_stack.adoc
+:page-aliases: stable@stackablectl::customization/add_stack.adoc
 
 == Motivation
 
