--- a/docs/modules/stackablectl/pages/quickstart.adoc
+++ b/docs/modules/stackablectl/pages/quickstart.adoc
@@ -48,12 +48,6 @@ Kubernetes client is configured to interact with the Kubernetes cluster. After t
 [source,console]
 ----
 $ stackablectl demo install trino-taxi-data
-The release commons-operator was successfully installed.
-The release hive-operator was successfully installed.
-The release opa-operator was successfully installed.
-The release secret-operator was successfully installed.
-The release superset-operator was successfully installed.
-The release trino-operator was successfully installed.
 Installed demo trino-taxi-data
 
 Use "stackablectl operator installed" to display the installed operators
@@ -81,13 +75,8 @@ You can now use your cluster with:
 
 kubectl cluster-info --context kind-stackable-data-platform
 
-Have a question, bug, or feature request? Let us know! https://kind.sigs.k8s.io/#community 🙂
-The release commons-operator was successfully installed.
-The release hive-operator was successfully installed.
-The release opa-operator was successfully installed.
-The release secret-operator was successfully installed.
-The release superset-operator was successfully installed.
-The release trino-operator was successfully installed.
+Have a nice day! 👋
+
 Installed demo trino-taxi-data
 
 Use "stackablectl operator installed" to display the installed operators
