--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -1,6 +1,6 @@
 .ie \n(.g .ds Aq \(aq
 .el .ds Aq '
-.TH stackablectl 1  "stackablectl 23.11.0-rc4" 
+.TH stackablectl 1  "stackablectl 23.11.0" 
 .SH NAME
 stackablectl \- Command line tool to interact with the Stackable Data Platform
 .SH SYNOPSIS
@@ -95,6 +95,6 @@ Interact with locally cached files
 stackablectl\-help(1)
 Print this message or the help of the given subcommand(s)
 .SH VERSION
-v23.11.0\-rc4
+v23.11.0
 .SH AUTHORS
 Stackable GmbH <info@stackable.tech>
