--- a/docs/modules/stackablectl/partials/commands/index.adoc
+++ b/docs/modules/stackablectl/partials/commands/index.adoc
@@ -13,6 +13,7 @@ Commands:
   demo         Interact with demos, which are end-to-end usage demonstrations of the Stackable data platform
   completions  Generate shell completions for this tool
   cache        Interact with locally cached files
+  debug
   help         Print this message or the help of the given subcommand(s)
 
 Options:
