--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -92,6 +92,8 @@ Generate shell completions for this tool
 stackablectl\-cache(1)
 Interact with locally cached files
 .TP
+stackablectl\-debug(1)
+.TP
 stackablectl\-help(1)
 Print this message or the help of the given subcommand(s)
 .SH VERSION
