--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -92,7 +92,8 @@ Generate shell completions for this tool
 stackablectl\-cache(1)
 Interact with locally cached files
 .TP
-stackablectl\-debug(1)
+stackablectl\-experimental\-debug(1)
+EXPERIMENTAL: Launch a debug container for a Pod
 .TP
 stackablectl\-help(1)
 Print this message or the help of the given subcommand(s)
