feat: Add experimental debug container command (#204)
* Basic ability to create and attach a debug container

* Add support for copying env from a target container, as well as running a custom command

* Send TTY window size

* Read asynchronously from stdin

* Default to the default namespace

* Fix stdin not being re-registered correctly with the waker

* Add debug error messages

* Let AsyncStdin reset its state once shut down

* Docs, demarcate as experimental

* Move debug container name to span

* Changelog

* ci: use install-nix-action

* fix(nix): add shebang to script (stackabletech/operator-templating#325)

* Move dependencies into root Cargo.toml

* Uglify formatting

* Change the container prefix from sble-debug- to stackablectl-debug-

* Default to the target container's image

* Run debug container as root

---------

Co-authored-by: Nick Larsen <nick.larsen@stackable.tech>

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -92,6 +92,9 @@ Generate shell completions for this tool
 stackablectl\-cache(1)
 Interact with locally cached files
 .TP
+stackablectl\-experimental\-debug(1)
+EXPERIMENTAL: Launch a debug container for a Pod
+.TP
 stackablectl\-help(1)
 Print this message or the help of the given subcommand(s)
 .SH VERSION
