docs: Fix cockpit installation guide

--- a/docs/modules/cockpit/pages/installation.adoc
+++ b/docs/modules/cockpit/pages/installation.adoc
@@ -37,15 +37,15 @@ First ensure that you have installed the Stackable Operators Helm repository:
 
 [source,console]
 ----
-$ helm repo add stackable https://repo.stackable.tech/repository/helm-stable/
+$ helm repo add stackable-dev https://repo.stackable.tech/repository/helm-dev/
 ----
 
 Then install the Stackable Cockpit:
 
 [source,console]
 ----
-$ helm upgrade listener-operator stackable/stackable-cockpit --install \
-  --set-file htpasswd=my-htpasswd
+$ helm upgrade stackable-cockpit stackable-dev/stackable-cockpit --install \
+  --version 0.0.0-dev --set-file htpasswd=my-htpasswd
 ----
 
 Helm will deploy the service in Kubernetes containers. You're now ready to access the cockpit!
