--- a/docs/modules/stackablectl/pages/installation.adoc
+++ b/docs/modules/stackablectl/pages/installation.adoc
@@ -15,13 +15,21 @@ manual building steps can be found in xref:#building-from-source[this] section.
 Linux::
 +
 --
-Download the `stackablectl-x86_64-unknown-linux-gnu` binary file from the link:{latest-release}[latest release], then
-rename the file to `stackablectl`. You can also use the following command:
+Download the appropriate binary file for your architecture, `stackablectl-x86_64-unknown-linux-gnu` for Intel-based devices or
+`stackablectl-aarch64-unknown-linux-gnu` for ARM-based devices from the link:{latest-release}[latest release],
+then rename the file to `stackablectl`. You can also use the following command:
+
+*x86_64* (amd64):
 
 [source,console]
 ----
 $ curl -L -o stackablectl https://github.com/stackabletech/stackable-cockpit/releases/download/stackablectl-24.7.0/stackablectl-x86_64-unknown-linux-gnu
-# or
+----
+
+**aarch64** (arm64):
+
+[source,console]
+----
 $ curl -L -o stackablectl https://github.com/stackabletech/stackable-cockpit/releases/download/stackablectl-24.7.0/stackablectl-aarch64-unknown-linux-gnu
 ----
 
@@ -38,14 +46,21 @@ Then, make sure it is present in your `$PATH`, like `/usr/local/bin`.
 macOS::
 +
 --
-Download the `stackablectl-x86_64-apple-darwin` binary file for Intel-based devices or the
-`stackablectl-aarch64-apple-darwin` binary file for ARM-based devices from the link:{latest-release}[latest release],
+Download the appropriate binary file for your architecture, `stackablectl-x86_64-apple-darwin` for Intel-based devices or
+`stackablectl-aarch64-apple-darwin` for ARM-based devices from the link:{latest-release}[latest release],
 then rename the file to `stackablectl`. You can also use the following command:
+
+*x86_64* (amd64):
 
 [source,console]
 ----
 $ curl -L -o stackablectl https://github.com/stackabletech/stackable-cockpit/releases/download/stackablectl-24.7.0/stackablectl-x86_64-apple-darwin
-# or
+----
+
+**aarch64** (arm64):
+
+[source,console]
+----
 $ curl -L -o stackablectl https://github.com/stackabletech/stackable-cockpit/releases/download/stackablectl-24.7.0/stackablectl-aarch64-apple-darwin
 ----
 
