feat: Add shell completions for Nushell and Elvish (#337)
* feat(stackablectl): nushell completions

* feat(stackablectl): elvish completions

* chore(xtask): Add gen-all command

* chore(stackablectl): update changelog

* Apply suggestions from code review

Co-authored-by: Techassi <git@techassi.dev>

---------

Co-authored-by: Techassi <git@techassi.dev>

--- a/docs/modules/stackablectl/partials/commands/completions.adoc
+++ b/docs/modules/stackablectl/partials/commands/completions.adoc
@@ -6,10 +6,12 @@ Generate shell completions for this tool
 Usage: stackablectl completions [OPTIONS] <COMMAND>
 
 Commands:
-  bash  Generate shell completions for Bash
-  fish  Generate shell completions for Fish
-  zsh   Generate shell completions for ZSH
-  help  Print this message or the help of the given subcommand(s)
+  bash     Generate shell completions for Bash
+  elvish   Generate shell completions for Elvish
+  fish     Generate shell completions for Fish
+  nushell  Generate shell completions for Nushell
+  zsh      Generate shell completions for ZSH
+  help     Print this message or the help of the given subcommand(s)
 
 Options:
   -l, --log-level <LOG_LEVEL>
