--- a/docs/modules/stackablectl/partials/commands/stack.adoc
+++ b/docs/modules/stackablectl/partials/commands/stack.adoc
@@ -21,6 +21,9 @@ Options:
           Cached files are saved at '$XDG_CACHE_HOME/stackablectl', which is usually
           '$HOME/.cache/stackablectl' when not explicitly set.
 
+      --release <RELEASE>
+          Target a specific Stackable release
+
   -h, --help
           Print help (see a summary with '-h')
 
