--- a/docs/modules/stackablectl/pages/installation.adoc
+++ b/docs/modules/stackablectl/pages/installation.adoc
@@ -96,15 +96,14 @@ up asking if you want to allow access for `stackablectl`. You must allow access.
 Windows::
 +
 --
-Currently, there are no pre-built binaries available for Windows. At the time of writing this compiling `stackablectl` on
-Windows was impossible due to upstream bugs.
+Currently, there are no pre-built binaries available for Windows.
+At the time of writing, compiling `stackablectl` on Windows was impossible due to upstream bugs.
 While it may have become possible since then, it'll still provide significant challenges due to high technical complexity
 related to FFI, cgo and Windows-specific issues.
 
-For Windows users, WSL will probably be the option for using `stackablectl`.
+For Windows users, WSL will probably be the best option for using `stackablectl`.
 
-If you do want to attempt compiling for Windows, please refer to xref:#building-from-source[this] section - and if you are successful, by
-all means, give us a shout and we will reward you handsomely!!
+If you do want to attempt compiling for Windows, please refer to xref:#building-from-source[this] section - and if you are successful, by all means, give us a shout and we will reward you handsomely!
 --
 ====
 
