--- a/docs/modules/stackablectl/partials/commands/release.adoc
+++ b/docs/modules/stackablectl/partials/commands/release.adoc
@@ -10,6 +10,7 @@ Commands:
   describe   Print out detailed release information
   install    Install a specific release
   uninstall  Uninstall a release
+  upgrade    Upgrade a release
   help       Print this message or the help of the given subcommand(s)
 
 Options:
