docs: Add note about independent versioning

--- a/docs/modules/stackablectl/partials/release-notes/release-1.0.0.adoc
+++ b/docs/modules/stackablectl/partials/release-notes/release-1.0.0.adoc
@@ -1,5 +1,12 @@
 == 1.0.0
 
+[NOTE]
+====
+Previously, `stackablectl` was release alongside each Stackable Data Platform (SDP) release.
+However, the patch releases from thereon were not related to SDP.
+We have since decided to version `stackablectl` independently of SDP, starting at 1.0.0.
+====
+
 * We have added visual progress reporting to more easily see what the tool is doing at any given moment in time.
   Previously, it looked like the tool was hanging as nothing was printed out to the terminal during the installation, but only after.
   See https://github.com/stackabletech/stackable-cockpit/pull/376[stackable-cockpit#376].
