chore: Apply suggestion
Co-authored-by: Nick <10092581+NickLarsenNZ@users.noreply.github.com>

--- a/docs/modules/stackablectl/partials/release-notes/release-1.1.0.adoc
+++ b/docs/modules/stackablectl/partials/release-notes/release-1.1.0.adoc
@@ -5,3 +5,5 @@
 * Ignore failed re-application of Jobs due to immutability in demo and stack installations.
   The user is now asked if these be deleted or recreated.
   See https://github.com/stackabletech/stackable-cockpit/pull/386[stackable-cockpit#386].
+* Default to release build for nix users.
+  See https://github.com/stackabletech/stackable-cockpit/pull/388[stackable-cockpit#388].
